# RAG-BME

./: .gitignore  .rag_books.json  README.md  pyproject.toml  run_real.py
src/biomed_rag/: __init__.py  pipeline.py
src/biomed_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/chunking/: test_chunk_completeness_property.py  test_chunk_metadata_property.py  test_chunk_token_bound_property.py  test_chunker_fitting_table_property.py  test_chunker_smoke.py  test_chunker_table_smoke.py  test_configured_overlap_property.py
tests/config/: test_pipeline_config.py
tests/embedding/: test_embedder_timeout_retry.py  test_embedding_dimension_property.py  test_model_registry.py
tests/ingestion/: test_dedup_idempotency_property.py  test_ingestion_service.py  test_ingestion_validation_property.py  test_job_id_uniqueness_property.py  test_job_state_store.py
tests/models/: test_data_model_invariants.py
tests/normalization/: test_artifacts_and_dehyphenation.py  test_content_preservation_property.py  test_dehyphenation_dictionary_property.py  test_header_footer_removal_property.py  test_normalize_empty_malformed.py  test_normalize_smoke.py  test_serialization_roundtrip_property.py  test_serialization_smoke.py
tests/ocr/: test_confidence_bounds_property.py  test_processor.py
tests/orchestration/: test_failure_preservation_resume_property.py  test_orchestrator_completion_failure.py  test_orchestrator_completion_resume.py  test_orchestrator_retry_resume.py  (+5 more)
webapp/: README.md  __init__.py  app.py  book_metadata.py  llm.py  rag_engine.py  requirements.txt
(+78 files in other folders)
